--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Encode+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
-
   <article class="bootcamp">
     <div class="container container--sm">
       <header class="bootcamp__header">
         <a href="#">
           <h1 class="bootcamp__heading">Bootcamp <span>2019</span></h1>
-          <p class="bootcamp__sub-heading">Bootcamp Full Stack Developer Avanzado</p>
+          <p class="bootcamp__sub-heading">Full Stack Developer Avanzado</p>
         </a>
         <ul class="bootcamp__metainfo">
           <li aria-label="Fecha de inicio">2 <abbr title="Abril">Abr</abb> 2019</li>
@@ -29,15 +27,14 @@
           exigente</p>
       </header>
     </div>
-    <div class="retoque">
+    <div class="skew">
       <div class="container">
         <h2 class="bootcamp__sub-heading">Fullstack Development Avanzado</h2>
         <p class="bootcamp__text">Un curso intensivo presencial en Madrid, que te permitirá tener acceso al mercado de
           las empresas tecnológicas
           y startups, en tan <strong>solo 4 meses</strong>. Aprenderás tecnologías front-end y back-end basadas en
           Javascript: Angular, NodeJS&hellip; y las aplicarás a proyectos reales.</p>
-        <button type="button" class="btn">Más información sobre el Bootcamp</button>
-
+        <button type="button" class="btn">Más información</button>
         <form action="" class="subscription">
           <div class="form-group">
             <label for="email" class="form-group__label"></label>
@@ -47,6 +44,7 @@
     </div>
 
   </article>
+  
 
   <!--   <p>Para optimizasr el SVG usamos:
     <a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a>
