desktop y movil correciones

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="demo">
+<html>
 
 <head>
   <meta charset="utf-8" />
@@ -12,16 +12,16 @@
 
 <body>
   <article class="bootcamp">
-    <div class="container container--sm">
+    <div class="container">
       <header class="bootcamp__header">
         <a href="#">
           <h1 class="bootcamp__heading">Bootcamp <span>2019</span></h1>
           <p class="bootcamp__sub-heading">Full Stack Developer Avanzado</p>
         </a>
         <ul class="bootcamp__metainfo">
-          <li aria-label="Fecha de inicio">2 <abbr title="Abril">Abr</abb> 2019</li>
-          <li aria-label="Asistencia">Presencial</li>
-          <li aria-label="Dónde">Madrid</li>
+          <li aria-label="Fecha de inicio" class="bootcamp__logo">2 <abbr title="Abril">Abr</abb> 2019</li>
+          <li aria-label="Asistencia" class="bootcamp__logo">Presencial</li>
+          <li aria-label="Dónde" class="bootcamp__logo bootcamp__logo--sm">Madrid</li>
         </ul>
         <p class="bootcamp__lead">Learn by doing: 4 meses de formación en proyectos reales en un entorno de trabajo
           exigente</p>
