--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <article class="bootcamp">
+  <div class="bootcamp">
     <div class="container">
       <header class="bootcamp__header">
         <a href="#">
@@ -19,15 +19,14 @@
           <p class="bootcamp__sub-heading">Full Stack Developer Avanzado</p>
         </a>
         <ul class="bootcamp__metainfo">
-          <li aria-label="Fecha de inicio" class="bootcamp__logo">2 <abbr title="Abril">Abr</abb> 2019</li>
-          <li aria-label="Asistencia" class="bootcamp__logo">Presencial</li>
-          <li aria-label="Dónde" class="bootcamp__logo bootcamp__logo--sm">Madrid</li>
+          <li aria-label="Fecha de inicio">2 <abbr title="Abril">Abr</abb> 2019</li>
+          <li aria-label="Asistencia">Presencial</li>
+          <li aria-label="Dónde">Madrid</li>
         </ul>
         <p class="bootcamp__lead">Learn by doing: 4 meses de formación en proyectos reales en un entorno de trabajo
           exigente</p>
       </header>
     </div>
-    <div class="skew">
       <div class="container">
         <h2 class="bootcamp__sub-heading">Fullstack Development Avanzado</h2>
         <p class="bootcamp__text">Un curso intensivo presencial en Madrid, que te permitirá tener acceso al mercado de
@@ -41,9 +40,7 @@
           </div>
         </form>
       </div>
-    </div>
-
-  </article>
+  </div>
   
 
   <!--   <p>Para optimizasr el SVG usamos:
