--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body>
   <div class="bootcamp">
-    <div class="container">
-      <header class="bootcamp__header">
+    <header class="bootcamp__header">
+      <div class="container">
         <a href="#">
-          <h1 class="bootcamp__heading">Bootcamp <span>2019</span></h1>
+          <h1 class="bootcamp__heading">
+            Bootcamp <span>2019</span></h1>
           <p class="bootcamp__sub-heading">Full Stack Developer Avanzado</p>
         </a>
         <ul class="bootcamp__metainfo">
@@ -25,23 +26,23 @@
         </ul>
         <p class="bootcamp__lead">Learn by doing: 4 meses de formación en proyectos reales en un entorno de trabajo
           exigente</p>
-      </header>
-    </div>
-      <div class="container">
-        <h2 class="bootcamp__sub-heading">Fullstack Development Avanzado</h2>
-        <p class="bootcamp__text">Un curso intensivo presencial en Madrid, que te permitirá tener acceso al mercado de
-          las empresas tecnológicas
-          y startups, en tan <strong>solo 4 meses</strong>. Aprenderás tecnologías front-end y back-end basadas en
-          Javascript: Angular, NodeJS&hellip; y las aplicarás a proyectos reales.</p>
-        <button type="button" class="btn">Más información</button>
-        <form action="" class="subscription">
-          <div class="form-group">
-            <label for="email" class="form-group__label"></label>
-          </div>
-        </form>
       </div>
+    </header>
+    <div class="container">
+      <h2 class="bootcamp__sub-heading">Fullstack Development Avanzado</h2>
+      <p class="bootcamp__text">Un curso intensivo presencial en Madrid, que te permitirá tener acceso al mercado de
+        las empresas tecnológicas
+        y startups, en tan <strong>solo 4 meses</strong>. Aprenderás tecnologías front-end y back-end basadas en
+        Javascript: Angular, NodeJS&hellip; y las aplicarás a proyectos reales.</p>
+      <button type="button" class="btn">Más información</button>
+      <form action="" class="subscription">
+        <div class="form-group">
+          <label for="email" class="form-group__label"></label>
+        </div>
+      </form>
+    </div>
   </div>
-  
+
 
   <!--   <p>Para optimizasr el SVG usamos:
     <a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a>
